...
        android:id="@+id/itineraryFragment"
        android:enabled="true"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="Itinerary"
        app:showAsAction="always" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="Profile"
        android:enabled="true"
        app:showAsAction="always"/>
</menu>
