...
                        android:text="@string/edit_akun"
                        android:paddingRight="15dp"
                        android:paddingLeft="15dp"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="28dp"
                        android:id="@+id/tv_ubah_profil"
                        android:background="@drawable/rounded_button_white"
                        android:textSize="14sp"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginRight="5dp"/>

                    <androidx.appcompat.widget.AppCompatTextView
...
